syntax = "proto3";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message SegmentControl {
	enum ControlState {
		DISABLE = 0;
		ENABLE = 1;
	}

	uint32 segmentID = 1;
	ControlState controlState = 2;
}
