syntax = "proto3";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message TrainFunctionControl {
	uint32 trainID = 1;
	uint32 registerAddress = 2;
	uint32 registerValue = 3;
}
